fixed issue with gradient text on mobile

--- a/styles.css
+++ b/styles.css
@@ -31,10 +31,12 @@ hr {
 }
 
 .title {
-  font-weight: bold;
-  background-image: linear-gradient(45deg, #f11993, #f4bf1f);
+  background: -webkit-linear-gradient(-70deg,#db469f,#2188ff);
+    background-clip: border-box;
+  -webkit-background-clip: text;
   background-clip: text;
-  color: transparent;
+  -webkit-text-fill-color: transparent;
+  -webkit-box-decoration-break: clone;
 }
 
 .subtitle {
